[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
chainlit = "1.1.202"
langchain = "0.2.1"
langgraph = "0.0.55"
langchain-openai = "0.1.7"
langchain-community = "0.2.1"
duckduckgo-search = "6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
