[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
chainlit = "^1.1.402"
langchain = "^0.2.15"
langgraph = "^0.2.14"
langchain-openai = "^0.1.23"
langchain-community = "^0.2.14"
duckduckgo-search = "^6.2.11"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
